# Matrix

./: .gitignore  CMakeLists.txt  README.md  main.cpp
lib/include/: Finite.h  Matrix.h  My_traits.h  Rational.h  matr.txt  test_matrix.h
lib/src/: Finite.cpp  Matrix.cpp
